<resources>
    <string name="app_name">FreshFood</string>
    <string name="food_items_image">food items image</string>
    <string name="bottom_navigation_store">Store</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_cart">Carts</string>
    <string name="bottom_navigation_favorite">Favorite</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="user_profile">Profile</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="food_available">Available</string>
    <string name="food_out">Out</string>
    <string name="item_detail">Item detail</string>
    <string name="image_of_store">Image of store</string>
    <string name="image_of_owner">image of owner</string>
    <string name="search">Search</string>
    <string name="food_amount">/1kg</string>
    <string name="cart_image_button">cart image button</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="love_symbol">love symbol</string>
    <string name="carts">Carts</string>
    <string name="remove">Remove</string>
    <string name="make_payment">Make payment</string>
    <string name="total">Total</string>
    <string name="substract">-</string>
    <string name="plus">+</string>
    <string name="basic_food_amount">1kg</string>
    <string name="vegetable">Vegetable</string>
    <string name="fruits">Fruits</string>
    <string name="seafood">Seafood</string>
    <string name="return_home">Return Home</string>
    <string name="vegetable_store">Vegetable Store</string>

    <string name="empty_cart">Cart is empty!</string>
    <string name="nearby_store">Nearby Store</string>
    <string name="store">Store</string>
</resources>
