<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CartActivity">
    <TextView
        android:id="@+id/carts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/carts"
        android:textSize="30sp"
        android:textStyle="normal" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="@dimen/layout_cardview"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:background="?attr/selectableItemBackground"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardElevation="@dimen/layout_cardview"
        app:cardCornerRadius="@dimen/layout_radius"
        android:background="?attr/selectableItemBackgroundBorderless"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/total"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:padding="5dp"
                tools:text="Total"
                />
            <TextView
                android:id="@+id/tvPaymentValue"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/tvTotal"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="120dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="@color/red"
                tools:text="100$"
                />

            <Button
                android:id="@+id/btnPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_payment"
                android:background="@color/red"
                android:layout_below="@id/tvTotal"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/btnHome"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_home"
                android:background="@color/blue"
                android:layout_below="@id/btnPayment"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>