<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".fragments.HomeFragment">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:foreground="?attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:scaleType="fitStart"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/user_profile" />

   <EditText
       android:layout_width="0dp"
       android:layout_height="40dp"
       android:background="@null"
       android:hint="@string/search"
        android:layout_weight="1"
       android:inputType="text"
       android:paddingStart="15dp"
       android:paddingEnd="15dp"
       android:textColor="@color/black"
       android:textSize="14sp"
       />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/search_icon_background"
            android:padding="5dp"
            android:src="@drawable/ic_search"
            android:tint="@color/colorPrimary"/>

    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/header">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
<androidx.cardview.widget.CardView
    android:id="@+id/vegetableCardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:cardElevation="@dimen/layout_cardview"
    app:cardCornerRadius="@dimen/layout_radius"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvVegetable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vegetable"
        android:textColor="#111"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:visibility="visible"
        tools:text="Vegetable"/>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/vegetableRecycleView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:clipToPadding="false"
        android:layout_below="@id/tvVegetable"
       />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/fruitsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vegetableCardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="@dimen/layout_cardview"
        app:cardCornerRadius="@dimen/layout_radius"
        >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvFruits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/fruits"
        android:fontFamily="sans-serif"
        android:textColor="#111"
        android:padding="5dp"
        android:visibility="visible"
        tools:text="Fruits"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fruitsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_below="@id/tvFruits"
       />
</RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/seafoodCardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fruitsCardView"
        app:cardElevation="@dimen/layout_cardview"
        app:cardCornerRadius="@dimen/layout_radius">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
    <TextView
        android:id="@+id/tvSeaFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/seafood"
        android:fontFamily="sans-serif"
        android:textColor="#111"
        android:padding="5dp"
        android:visibility="visible"
        tools:text="Sea Foods"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/seaFoodRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
       android:layout_below="@id/tvSeaFood"
        />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</RelativeLayout>