<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        android:id="@+id/detailCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:elevation="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".view.DetailActivity"
       >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundWhite"
        android:padding="2dp"
        >
        <ImageView
            android:id="@+id/ivFoodItem"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/item_detail"
            android:fitsSystemWindows="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/image_shadow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tvStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:singleLine="true"
            android:ellipsize="none"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="@id/ivFoodItem"
            tools:text="Beautiful Store"
            />
        <TextView
            android:id="@+id/tvFoodName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toBottomOf="@id/tvStoreName"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            tools:text="Tuna"/>


        <TextView
            android:id="@+id/tvFoodAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@id/tvFoodName"
            app:layout_constraintTop_toBottomOf="@id/tvStoreName"
            android:textColor="@color/green"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="18sp"
            tools:text="5kg"
            />

        <TextView
            android:id="@+id/tvIsAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvFoodAmount"
            app:layout_constraintTop_toBottomOf="@id/tvStoreName"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:ellipsize="end"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            tools:text="available"
            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="150dp"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivFoodItem"
            android:text="@string/add_to_cart"
            android:textStyle="bold"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:drawableEnd="@drawable/ic_shopping_cart_black_24dp"
            android:background="@color/white"
            android:textColor="@color/green"
            tools:text="Add to cart"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFoodName"
            android:textColor="#111"
            android:fontFamily="sans-serif"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="20sp"
            tools:text="100$"
            />

        <TextView
            android:id="@+id/tvPriceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvPrice"
            app:layout_constraintTop_toBottomOf="@id/tvFoodName"
            android:textColor="#111"
            android:singleLine="true"
            android:textSize="20sp"
            android:text="@string/food_amount"
            tools:text="/1kg"
            />
        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvFoodAmount"
            app:layout_constraintStart_toEndOf="@id/tvPriceInfo"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:textSize="20sp"
            tools:text="20% off"
            android:visibility="gone"
            />
        <ImageView
            android:id="@+id/ivFavourite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toEndOf="@id/tvDiscount"
            app:layout_constraintTop_toBottomOf="@id/tvIsAvailable"
            android:layout_marginStart="80dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:contentDescription="@string/love_symbol" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

